E-commerce Project - Update
Cookies

--- a/E-commerce Project/cookies-demo/package.json
+++ b/E-commerce Project/cookies-demo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "e-commerce-project",
+  "name": "cookies-demo",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -11,12 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "ejs-mate": "^4.0.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
-    "joi": "^17.13.3",
-    "method-override": "^3.0.0",
-    "mongoose": "^8.5.1",
     "nodemon": "^3.1.4"
   }
 }
